syntax = "proto3";
option go_package = ".;iproto";
// 协议消息
message protocol {
  uint32 id = 1;
  bytes content = 2;
}
// 打包消息
message sc_protocol_pack {
  uint32 id = 1;
  repeated protocol pack = 2;
}
// 帧消息
message sc_frame {
  uint32 frame = 1;
  repeated bytes protocols = 2;
}